Fix small gap caused by clip-path

--- a/client/src/components/reward-item/reward-item.styles.scss
+++ b/client/src/components/reward-item/reward-item.styles.scss
@@ -38,7 +38,7 @@
         width: 100%;
         background-color: #707eff;
         padding-left: 6rem;
-        clip-path: polygon(0 0, 100% 0, 100% 100%, 15% 100%);
+        clip-path: polygon(0 0, 100% 0, 100% calc(100% + .5px), 15% calc(100% + .5px));
         border-radius: 0 .5rem .5rem 0;
 
         .reward-to-complete {
@@ -149,7 +149,7 @@
         }
 
         .reward-right-side {
-            clip-path: polygon(0 4rem, 100% 0, 100% 100%, 0 100%);
+            clip-path: polygon(0 4rem, 100% 0, 100% calc(100% + .5px), 0 calc(100% + .5px));
             width: 100%;
             padding-left: 0;
             border-radius: 0 0 .5rem .5rem;
