--- a/client/src/components/toggle-button/toggle-button.styles.scss
+++ b/client/src/components/toggle-button/toggle-button.styles.scss
@@ -1,7 +1,7 @@
 .toggle-button-container {
     height: 6rem;
     border-radius: .5rem 0 0 .5rem;
-    clip-path: polygon(0 0, 85% 0, 100% 100%, 0 100%);
+    clip-path: polygon(0 0, 85% 0, 100% calc(100% + .5px), 0 calc(100% + .5px));
     width: 10%;
 
     .toggle-button {
@@ -13,7 +13,7 @@
         border: none;
         border-radius: .5rem 0 0 .5rem;
         background-color: #707eff;
-        clip-path: polygon(0 0, 85% 0, 100% 100%, 0 100%);
+        clip-path: polygon(0 0, 85% 0, 100% calc(100% + .5px), 0 calc(100% + .5px));
         outline: none;
         cursor: pointer;
     
